--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Erin L. Rich by erich001</title>
+    <title>ErinRich</title>
   </head>
 
   <body>
@@ -23,7 +23,6 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/erich001" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
         <hr>
