--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </header>
 
         <section id="downloads" class="clearfix">
+          <img src="images/brainslices.png" alt="hi" class="inline"/>
         </section>
 
         <hr>
