--- a/index.html
+++ b/index.html
@@ -31,12 +31,31 @@
         <section id="main_content">
           <p><strong>Contact</strong> erin.rich (at) berkeley (dot) edu</p>
 
-<p>I will be an Assistant Professor in the <a href="http://icahn.mssm.edu/research/friedman">Department of Neuroscience</a> starting in the spring of 2017. Post-doc positions are available in my new lab, please contact me for more information. I am currently a Post-doc in <a href="http://www.wallislab.org/">Wallis Lab</a> at the University of California Berkeley, and collaborate with the <a href="http://changlab.ucsf.edu/our-team-1/">Chang Lab</a> at the University of California San Francisco.</p>
+<p>I will be an Assistant Professor in the <a href="http://icahn.mssm.edu/research/friedman">Department of Neuroscience</a> at Mount Sinai (Icahn) School of Medicine starting in the spring of 2017. Post-doc positions are available in my new lab, please contact me for more information. I am currently a Post-doc in <a href="http://www.wallislab.org/">Wallis Lab</a> at the University of California Berkeley, and collaborate with the <a href="http://changlab.ucsf.edu/our-team-1/">Chang Lab</a> at the University of California San Francisco.</p>
 
 <h3>
 <a id="research" class="anchor" href="#research" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research</h3>
 
 <p>My research focuses on understanding the biological basis of complex behavior and cognition. I am particularly interested in how affective processing - in other words how much you do or don't like something - interacts with cognitive and perceptual processing to give rise to learning, memory and decision-making. My principal approach is recording neurophysiological signals from the brain while a subject engages in tasks that tax these abilities.    </p>
+        
+        <h3>
+<a id="Recent Papers" class="anchor" href="#research" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research</h3>
+
+<p>My full CV can be downloaded here
+
+<p>Rich, E.L., Wallis, J.D. Decoding subjective decisions from Orbitofrontal Cortex. Nature Neuroscience, In press. </p>
+
+<p>Rich, E.L., Wallis, J.D. Medial-lateral organization of the orbitofrontal cortex.  J Cogn Neurosci.  2014 Jul; 26(7):1347-62.</p>
+
+<p>Rich E.L., Wallis, J.D.  Prefrontal-Amygdala Interactions Underlying Value Coding.  Neuron.  2013 Dec; 80(6):1344-1346.
+	Preview for Rudebeck and Murray, 2013.</p>
+
+<p>Perez-Rodriguez, M.M., Hazlett, E.A., Rich, E.L., Ripoll, L.H., Weiner, D.M., Spence, N., Goodman, M., Koenigsberg, H.W., Siever, L.J., New, A.S.  Striatal activity in borderline personality disorder with comorbid intermittent explosive disorder: sex differences.  J Psychiatr Res. 2012 Jun;46(6):797-804.</p>
+
+<p>Wallis, J.D., Rich, E.L.  Challenges of Interpreting Frontal Neurons during Value-Based Decision-Making.  Front Neurosci. 2011;5:124. </p>
+
+<p>Rich, E.L., Shapiro, M.L.  Rat prefrontal cortical neurons selectively code strategy switches.  J Neurosci. 2009 Jun:29(22):7208-19.
+</p>
         </section>
 
         <footer>
