--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <p>My research focuses on understanding the biological basis of complex behavior and cognition. I am particularly interested in how affective processing - in other words how much you do or don't like something - interacts with cognitive and perceptual processing to give rise to learning, memory and decision-making. My principal approach is recording neurophysiological signals from the brain while a subject engages in tasks that tax these abilities.    </p>
         
         <h3>
-<a id="Recent Papers" class="anchor" href="#research" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research</h3>
+<a id="Recent Papers" class="anchor" href="#Recent Papers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research</h3>
 
 <p>My full CV can be downloaded here
 
