--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
 
 <p>My full CV can be downloaded here
 
-<p>Rich, E.L., Wallis, J.D. Decoding subjective decisions from Orbitofrontal Cortex. Nature Neuroscience, In press. </p>
+<p>Rich, E.L., Wallis, J.D. Decoding subjective decisions from Orbitofrontal Cortex. Nat Neurosci, In press. </p>
+
+<p>Rich, E.L., Wallis, J.D. Finding consistency in the Orbitofrontal Cortex. Nat Neurosci, In press. Commentary for Xie and Padoa-Schioppa, 2016.</p>
 
 <p>Rich, E.L., Wallis, J.D. Medial-lateral organization of the orbitofrontal cortex.  J Cogn Neurosci.  2014 Jul; 26(7):1347-62.</p>
 
 <p>Rich E.L., Wallis, J.D.  Prefrontal-Amygdala Interactions Underlying Value Coding.  Neuron.  2013 Dec; 80(6):1344-1346.
-	Preview for Rudebeck and Murray, 2013.</p>
+	Commentary for Rudebeck and Murray, 2013.</p>
 
 <p>Perez-Rodriguez, M.M., Hazlett, E.A., Rich, E.L., Ripoll, L.H., Weiner, D.M., Spence, N., Goodman, M., Koenigsberg, H.W., Siever, L.J., New, A.S.  Striatal activity in borderline personality disorder with comorbid intermittent explosive disorder: sex differences.  J Psychiatr Res. 2012 Jun;46(6):797-804.</p>
 
