--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h3>
 <a id="Recent Papers" class="anchor" href="#Recent Papers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Recent Papers</h3>
 
-<p>My full CV can be downloaded here
+<p>My full CV can be downloaded <a href= "erich001.github.io/ErinRichCV2016.pdf">here</a>
 
 <p>Rich, E.L., Wallis, J.D. Decoding subjective decisions from Orbitofrontal Cortex. Nat Neurosci, In press. </p>
 
