--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
 
 <p>My full CV can be downloaded <a href= "erich001.github.io/ErinRichCV2016.pdf">here</a>
 
-<p>Rich, E.L., Wallis, J.D. Decoding subjective decisions from Orbitofrontal Cortex. Nat Neurosci, In press. </p>
+<p><strong>Rich, E.L.</strong>, Wallis, J.D. Decoding subjective decisions from Orbitofrontal Cortex. Nat Neurosci, In press. </p>
 
-<p>Rich, E.L., Wallis, J.D. Finding consistency in the Orbitofrontal Cortex. Nat Neurosci, In press. Commentary for Xie and Padoa-Schioppa, 2016.</p>
+<p><strong>Rich, E.L.</strong>, Wallis, J.D. Finding consistency in the Orbitofrontal Cortex. Nat Neurosci, In press. Commentary for Xie and Padoa-Schioppa, 2016.</p>
 
-<p>Rich, E.L., Wallis, J.D. Medial-lateral organization of the orbitofrontal cortex.  J Cogn Neurosci.  2014 Jul; 26(7):1347-62.</p>
+<p><strong>Rich, E.L.</strong>, Wallis, J.D. Medial-lateral organization of the orbitofrontal cortex.  J Cogn Neurosci.  2014 Jul; 26(7):1347-62.</p>
 
-<p>Rich E.L., Wallis, J.D.  Prefrontal-Amygdala Interactions Underlying Value Coding.  Neuron.  2013 Dec; 80(6):1344-1346.
+<p><strong>Rich, E.L.</strong>, Wallis, J.D.  Prefrontal-Amygdala Interactions Underlying Value Coding.  Neuron.  2013 Dec; 80(6):1344-1346.
 	Commentary for Rudebeck and Murray, 2013.</p>
 
-<p>Perez-Rodriguez, M.M., Hazlett, E.A., Rich, E.L., Ripoll, L.H., Weiner, D.M., Spence, N., Goodman, M., Koenigsberg, H.W., Siever, L.J., New, A.S.  Striatal activity in borderline personality disorder with comorbid intermittent explosive disorder: sex differences.  J Psychiatr Res. 2012 Jun;46(6):797-804.</p>
+<p>Perez-Rodriguez, M.M., Hazlett, E.A., <strong>Rich, E.L.</strong>, Ripoll, L.H., Weiner, D.M., Spence, N., Goodman, M., Koenigsberg, H.W., Siever, L.J., New, A.S.  Striatal activity in borderline personality disorder with comorbid intermittent explosive disorder: sex differences.  J Psychiatr Res. 2012 Jun;46(6):797-804.</p>
 
-<p>Wallis, J.D., Rich, E.L.  Challenges of Interpreting Frontal Neurons during Value-Based Decision-Making.  Front Neurosci. 2011;5:124. </p>
+<p>Wallis, J.D., <strong>Rich, E.L.</strong>  Challenges of Interpreting Frontal Neurons during Value-Based Decision-Making.  Front Neurosci. 2011;5:124. </p>
 
-<p>Rich, E.L., Shapiro, M.L.  Rat prefrontal cortical neurons selectively code strategy switches.  J Neurosci. 2009 Jun:29(22):7208-19.
+<p><strong>Rich, E.L.</strong>, Shapiro, M.L.  Rat prefrontal cortical neurons selectively code strategy switches.  J Neurosci. 2009 Jun:29(22):7208-19.
 </p>
         </section>
 
