--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <![endif]-->
     <title>ErinRich</title>
   </head>
- <%= favicon_link_tag 'erich001.github.io/images/logo2.png'%> 
+ <link rel="shortcut icon" href="erich001.github.io/images/logo2.png "/>
   <body>
     <div id="container">
       <div class="inner">
