--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <![endif]-->
     <title>ErinRich</title>
   </head>
- <link rel="shortcut icon" href="erich001.github.io/images/logo3.png "/>
+ <link rel="shortcut icon" href="erich001.github.io/images/fullneuron.png "/>
   <body>
     <div id="container">
       <div class="inner">
