--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <div id="container">
       <div class="inner">
+      	rails generate ahoy:stores:log
 
         <header>
           <h1>Erin L. Rich</h1>
