--- a/pages/testpage.html
+++ b/pages/testpage.html
@@ -4,15 +4,15 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="https://erich001.github.io/stylesheet" type="text/css" href="https://erich001.github.io/stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="https://erich001.github.io/stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="https://erich001.github.io/stylesheets/print.css" media="print">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <title>ErinRich</title>
   </head>
- <link rel="shortcut icon" href="erich001.github.io/images/favicon.ico "/>
+ <link rel="shortcut icon" href="https://erich001.github.io/images/favicon.ico "/>
   <body>
     <div id="container">
       <div class="inner">
@@ -21,8 +21,8 @@
           <h2>testpage</h2>
         </header>
 
-<section id="downloads" class="clearfix">
-          <img src="images/brainslices.png" alt="hi" class="inline"/>
+	<section id="downloads" class="clearfix">
+          <img src="https://erich001.github.io/images/brainslices.png" alt="hi" class="inline"/>
         </section>
 
         <hr>
