--- a/pages/testpage.html
+++ b/pages/testpage.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
     <link rel="https://erich001.github.io/stylesheet" type="text/css" href="https://erich001.github.io/stylesheets/stylesheet.css" media="screen">
     <link rel="https://erich001.github.io/stylesheet" type="text/css" href="https://erich001.github.io/stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="https://erich001.github.io/stylesheets/print.css" media="print">
+    <link rel="https://erich001.github.io/stylesheet" type="text/css" href="https://erich001.github.io/stylesheets/print.css" media="print">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
