--- a/pages/testpage.html
+++ b/pages/testpage.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
-    <link rel="https://erich001.github.io/stylesheet" type="text/css" href="https://erich001.github.io/stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="https://erich001.github.io/stylesheets/css/main.css" media="screen">
     <link rel="https://erich001.github.io/stylesheet" type="text/css" href="https://erich001.github.io/stylesheets/github-dark.css" media="screen">
     <link rel="https://erich001.github.io/stylesheet" type="text/css" href="https://erich001.github.io/stylesheets/print.css" media="print">
     <!--[if lt IE 9]>
