--- a/testpage.html
+++ b/testpage.html
@@ -23,7 +23,7 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <img src="images/logo.pdf" alt="hi" class="inline"/>
+          <img src="images/logo.png" alt="hi" class="inline"/>
         </section>
 
         <hr>
