--- a/testpage.html
+++ b/testpage.html
@@ -22,9 +22,7 @@
           <h2>testpage</h2>
         </header>
 
-        <section id="downloads" class="clearfix">
-          <img src="images/logo_small.png" alt="hi" class="inline"/>
-        </section>
+          </p><img src="images/logo_small.png" class="pull-left"/>
 
         <hr>
 
