--- a/testpage.html
+++ b/testpage.html
@@ -18,11 +18,12 @@
       <div class="inner">
 
         <header>
+    	<img src="images/logo_small.png" width="50" class="pull-left"/>
           <h1>testpage</h1>
           <h2>testpage</h2>
         </header>
 
-          </p><img src="images/logo_small.png" class="pull-left"/>
+
 
         <hr>
 
