--- a/testpage.html
+++ b/testpage.html
@@ -18,8 +18,9 @@
       <div class="inner">
 
         <header>
-    	<img src="images/logo_small.png" width="30" class="pull-left"/>
-          <h1>testpage</h1>
+    	<a class="pull-left"><img src="images/logo_small.png" width="40" class="mr20"</a>
+        </div>
+        <div class="header pull-right">
           <h2>testpage</h2>
         </header>
 
