--- a/testpage.html
+++ b/testpage.html
@@ -18,10 +18,7 @@
       <div class="inner">
 
         <header>
-    	<a class="pull-left"><img src="images/logo_small.png" width="40" class="mr20"</a>
-        </div>
-        <div class="header pull-right">
-          <h2>testpage</h2>
+    	<p><img src="images/logo_small.png" width="60" class="pull-left" <h2>testpage</h2> </p>
         </header>
 
 
