--- a/testpage.html
+++ b/testpage.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-    	<p><img src="images/logo_small.png" width="60" class="pull-left" <h2>testpage</h2> </p>
+    	<img src="images/logo_small.png" width="60" class="pull-left" <h2>testpage</h2> 
         </header>
 
 
