--- a/testpage.html
+++ b/testpage.html
@@ -17,12 +17,9 @@
     <div id="container">
       <div class="inner">
 
-        <header>
-    	<img src="images/logo_small.png" width="60" class="pull-left" <h2>testpage</h2> 
-        </header>
-
-
-
+        
+    	<img src="images/logo_small.png" width="50" class="pull-left" <header><h2>testpage</h2></header> 
+        
         <hr>
 
         <section id="main_content">
