--- a/testpage.html
+++ b/testpage.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         
-    	<img src="images/logo_small.png" width="50" class="pull-left" class="in-line" <header><h1>  Positions Available</h1></header> 
+    	<header> <img src="images/logo_small.png" width="50" class="pull-left" class="in-line" <h1>Positions Available</h1></header> 
         
         <hr>
 
