--- a/testpage.html
+++ b/testpage.html
@@ -21,7 +21,7 @@
     	 <img src="images/logo_small.png" width="45" class="pull-left" class="in-line" 
     	
     	<header>
-    	<h1>Positions Available</h1>
+    	<h1> "&nbsp;&nbsp;&nbsp;&nbsp;" Positions Available</h1>
     	</header> 
         
         <hr>
