--- a/testpage.html
+++ b/testpage.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         
-    	 <img src="images/logo_small.png" width="45" class="logo" class="pull-left"/> 
+    	 <img src="images/logo_small.png" width="45" class="logo" class="pull-right"/> 
     	
     	<header>
     	<h1> Positions Available</h1>
