--- a/testpage.html
+++ b/testpage.html
@@ -21,7 +21,7 @@
     	 <img src="images/logo_small.png" width="45" class="logo" class="pull-right"/> 
     	
     	<header>
-    	<h1> Positions Available</h1>
+    	<h2> <strong>Positions Available</strong></h2>
     	</header> 
         
         <hr>
