--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <p><strong>Rich, E.L.</strong>, Wallis, J.D. Decoding subjective decisions from Orbitofrontal Cortex. <em>Nat Neurosci.</em> 2016 Jul;19(7):973-80.</p>
 
-<p><strong>Rich, E.L.</strong>, Wallis, J.D. What stays the same in orbitofrontal cortex. <em>Nat Neurosci.</em> 2016 May 26;19(6):768-70. <em>Commentary for Xie and Padoa-Schioppa</em></p>
+<p><strong>Rich, E.L.</strong>, Wallis, J.D. What stays the same in orbitofrontal cortex. <em>Nat Neurosci.</em> 2016 May 26;19(6):768-70. <em>Commentary for Xie and Padoa-Schioppa, 2016.</em></p>
 
 <p><strong>Rich, E.L.</strong>, Wallis, J.D. Medial-lateral organization of the orbitofrontal cortex.  <em>J Cogn Neurosci.</em>  2014 Jul; 26(7):1347-62.</p>
 
