--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p><strong>Contact</strong> erin.rich (at) berkeley (dot) edu</p>
 
 <p>I will be an Assistant Professor in the <a href="http://icahn.mssm.edu/research/friedman">Department of Neuroscience</a> at Mount Sinai (Icahn) School of Medicine starting in the spring of 2017. I am currently a Post-doc in <a href="http://www.wallislab.org/">Wallis Lab</a> at the University of California Berkeley, and collaborate with the <a href="http://changlab.ucsf.edu/our-team-1/">Chang Lab</a> at the University of California San Francisco.</p>
-<p>Post-doc positions are available in my new lab, to start on or after May 1, 2017. Please contact me for more information. </p>
+<p><a href= "erich001.github.io/trainee_flier.pdf">Post-doc positions</a> are available in my new lab, to start on or after May 1, 2017. Please contact me for more information. </p>
 
 <h3>
 <a id="research" class="anchor" href="#research" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research</h3>
