--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section id="main_content">
           <p><strong>Contact</strong> erin.rich (at) berkeley (dot) edu</p>
 
-<p>Visit my new website for the most up-to-date information: <a href="http://www.erinlrich.com/"><em>ErinLRich.com</em></a></p>
+<p>Visit my laboratory website for the most up-to-date information: <a href="http://labs.neuroscience.mssm.edu/project/rich-lab/"><em>Rich Lab</em></a></p>
 
 <p>I will be an Assistant Professor in the <a href="http://icahn.mssm.edu/research/friedman">Department of Neuroscience</a> at Mount Sinai (Icahn) School of Medicine starting in the spring of 2017. I am currently a Post-doc in <a href="http://www.wallislab.org/">Wallis Lab</a> at the University of California Berkeley, and collaborate with the <a href="http://changlab.ucsf.edu/our-team-1/">Chang Lab</a> at the University of California San Francisco.</p>
 <p><a href= "erich001.github.io/trainee_flier.pdf">Post-doc positions</a> are available in my new lab, to start on or after May 1, 2017. Please visit my website at the link above for more information. </p>
@@ -44,7 +44,7 @@
         <h3>
 <a id="Recent Papers" class="anchor" href="#Recent Papers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Recent Papers</h3>
 
-<p>My full CV can be downloaded <a href= "erich001.github.io/ErinRichCV2016.pdf">here</a>
+<p>My full CV can be downloaded <a href= "erich001.github.io/ErinRichCV2018.pdf">here</a>
 
 <p><strong>Rich, E.L.</strong>, Wallis, J.D. Decoding subjective decisions from Orbitofrontal Cortex. <em>Nat Neurosci.</em> 2016 Jul;19(7):973-80.</p>
 
