--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <hr>
 
         <section id="main_content">
-          <p><strong>Contact</strong> erin.rich (at) berkeley (dot) edu</p>
+          <p><strong>Contact</strong> erin.rich (at) mssm (dot) edu</p>
 
 <p>Visit my laboratory website for the most up-to-date information: <a href="http://labs.neuroscience.mssm.edu/project/rich-lab/"><em>Rich Lab</em></a></p>
 
