--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
 <p>Visit my laboratory website for the most up-to-date information: <a href="http://labs.neuroscience.mssm.edu/project/rich-lab/"><em>Rich Lab</em></a></p>
 
-<p>I will be an Assistant Professor in the <a href="http://icahn.mssm.edu/research/friedman">Department of Neuroscience</a> at Mount Sinai (Icahn) School of Medicine starting in the spring of 2017. I am currently a Post-doc in <a href="http://www.wallislab.org/">Wallis Lab</a> at the University of California Berkeley, and collaborate with the <a href="http://changlab.ucsf.edu/our-team-1/">Chang Lab</a> at the University of California San Francisco.</p>
-<p><a href= "erich001.github.io/trainee_flier.pdf">Post-doc positions</a> are available in my new lab, to start on or after May 1, 2017. Please visit my website at the link above for more information. </p>
+<p>I am an Assistant Professor in the <a href="http://icahn.mssm.edu/research/friedman">Department of Neuroscience</a> at Mount Sinai (Icahn) School of Medicine. The Rich Lab will move to the Center for Neural Science at New York University in 2025 </p>
+<p><a href= "erich001.github.io/trainee_flier.pdf"> Please visit my website at the link above for up-to-date information. </p>
 
 <h3>
 <a id="research" class="anchor" href="#research" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research</h3>
