--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p>Visit my laboratory website for the most up-to-date information: <a href="http://labs.neuroscience.mssm.edu/project/rich-lab/"><em>Rich Lab</em></a></p>
 
 <p>I am an Assistant Professor in the <a href="http://icahn.mssm.edu/research/friedman">Department of Neuroscience</a> at Mount Sinai (Icahn) School of Medicine. The Rich Lab will move to the Center for Neural Science at New York University in 2025 </p>
-<p><a href= "erich001.github.io/trainee_flier.pdf"> Please visit my website at the link above for up-to-date information. </p>
+<p>Please visit my website at the link above for up-to-date information. </p>
 
 <h3>
 <a id="research" class="anchor" href="#research" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research</h3>
