--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
 <p>Visit my laboratory website for the most up-to-date information: <a href="http://labs.neuroscience.mssm.edu/project/rich-lab/"><em>Rich Lab</em></a></p>
 
-<p>I am an Associate Professor in the <a href="http://icahn.mssm.edu/research/friedman">Department of Neuroscience</a> at Mount Sinai (Icahn) School of Medicine. The Rich Lab will move to the Center for Neural Science at New York University in 2025 </p>
+<p>I am an Associate Professor in the <a href="http://icahn.mssm.edu/research/friedman">Department of Neuroscience</a> at Icahn School of Medicine at Mount Sinai. The Rich Lab will move to the Center for Neural Science at New York University in 2025 </p>
+
 <p>Please visit my website at the link above for up-to-date information. </p>
 
 <h3>
