--- a/index.html
+++ b/index.html
@@ -43,6 +43,29 @@
         <h3>
 <a id="Recent Papers" class="anchor" href="#Recent Papers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Recent Papers</h3>
 
+
+<p>Nguyen, D., <strong>Rich, E.L.</strong>, Wallis, J.D., Louie, K., Glimcher, P.W.  Neuronal representation of the decisional reference point in monkeys.  <em>BioRxiv</em> 2024.12.20.629801; doi: https://doi.org/10.1101/2024.12.20.629801. </p>
+
+<p>Perkins, A.Q., <strong>Rich, E.L.</strong> Attention-dependent attribute comparisons underlie multi-attribute decision-making in orbitofrontal cortex.  <em>BioRxiv</em> 2024.11.12.623291; doi: https://doi.org/10.1101/2024.11.12.623291. </p>
+
+<p>Yang, F.C., Chiang, F.K., <strong>Rich, E.L.</strong>, Burwell, R.D. Pulvinar perturbation causes functional reorganization of visual attentional information in posterior parietal cortex.  <em>BioRxiv</em> 2024.09.29.615686. https://doi.org/10.1101/2024.09.29.615686. </p>
+
+<p>Simon, J., <strong>Rich, E.L.</strong> Neural populations in macaque anterior cingulate cortex encode social image identities.  <em>Nat Commun.</em> 15, 7500 (2024). doi: 10.1038/s41467-024-51825-5. </p>
+
+<p>Simon, J., <strong>Rich, E.L.</strong> Stimulating social interest: The translational value of basic investigations into frontal cortex function. <em>Neuron</em> 2024 Aug 7, 112(15):2461-2463. doi: 10.1016/j.neuron.2024.07.004. </p>
+<em>Commentary for Fan et al., 2024.</em>
+
+<p>Perkins, A.Q., Gillis, Z.S., <strong>Rich, E.L.</strong> Multi-attribute decision-making in macaques relies on direct attribute comparisons.  <em>J Cog Neurosci</em> 2024 Jun 26, 1-19. doi: 10.1162/jocn_a_02208. </p>
+		
+<p>Chien, J. Wallis, J.D., <strong>Rich, E.L.</strong> Abstraction of reward context facilitates relative reward coding in dorsal and ventral anterior cingulate cortex. <em>J Neurosci</em> 2023 Aug;43(33):5944-5962. doi: 10.1523/JNEUROSCI.0292-23.2023. </p>
+
+<p>Chiang, F.K., Wallis, J.D., <strong>Rich, E.L.</strong> Cognitive strategies shift information from single neurons to populations in prefrontal cortex. <em>Neuron</em> 2022 Feb 16;110(4):709-721.e4. doi: 10.1016/j.neuron.2021.11.021. </p>
+
+<p>Afzal, M.F., Márton, C.D., <strong>Rich, E.L.</strong>, Rajan, K. TRAKR - A reservoir-based tool for fast and accurate classification of neural time-series patterns. <em>BioRxiv</em> 2021 https://doi.org/10.1101/2021.10.13.464288. </p> 
+
+<p>Enel, P. Perkins, A.Q., <strong>Rich, E.L.</strong> Heterogeneous value coding in orbitofrontal populations. <em>Behav Neurosci</em> 2021 Apr;135(2):245-254. doi: doi.org/10.1037/bne0000457. </p>
+		
+
 <p><strong>Rich, E.L.</strong>, Wallis, J.D. Decoding subjective decisions from Orbitofrontal Cortex. <em>Nat Neurosci.</em> 2016 Jul;19(7):973-80.</p>
 
 <p><strong>Rich, E.L.</strong>, Wallis, J.D. What stays the same in orbitofrontal cortex. <em>Nat Neurosci.</em> 2016 May 26;19(6):768-70. <em>Commentary for Xie and Padoa-Schioppa, 2016.</em></p>
@@ -56,8 +79,6 @@
 
 <p>Wallis, J.D., <strong>Rich, E.L.</strong>  Challenges of Interpreting Frontal Neurons during Value-Based Decision-Making.  <em>Front Neurosci.</em> 2011;5:124. </p>
 
-<p><strong>Rich, E.L.</strong>, Shapiro, M.L.  Rat prefrontal cortical neurons selectively code strategy switches.  <em>J Neurosci.</em> 2009 Jun:29(22):7208-19.
-</p>
         </section>
 
         <footer>
