--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
 <p>Simon, J., <strong>Rich, E.L.</strong> Neural populations in macaque anterior cingulate cortex encode social image identities.  <em>Nat Commun.</em> 15, 7500 (2024). doi: 10.1038/s41467-024-51825-5. </p>
 
-<p>Simon, J., <strong>Rich, E.L.</strong> Stimulating social interest: The translational value of basic investigations into frontal cortex function. <em>Neuron</em> 2024 Aug 7, 112(15):2461-2463. doi: 10.1016/j.neuron.2024.07.004. </p>
-<em>Commentary for Fan et al., 2024.</em>
+<p>Simon, J., <strong>Rich, E.L.</strong> Stimulating social interest: The translational value of basic investigations into frontal cortex function. <em>Neuron</em> 2024 Aug 7, 112(15):2461-2463. doi: 10.1016/j.neuron.2024.07.004. 
+<em>Commentary for Fan et al., 2024.</em></p>
 
 <p>Perkins, A.Q., Gillis, Z.S., <strong>Rich, E.L.</strong> Multi-attribute decision-making in macaques relies on direct attribute comparisons.  <em>J Cog Neurosci</em> 2024 Jun 26, 1-19. doi: 10.1162/jocn_a_02208. </p>
 		
@@ -65,19 +65,25 @@
 
 <p>Enel, P. Perkins, A.Q., <strong>Rich, E.L.</strong> Heterogeneous value coding in orbitofrontal populations. <em>Behav Neurosci</em> 2021 Apr;135(2):245-254. doi: doi.org/10.1037/bne0000457. </p>
 		
+<p>Perkins, A.Q., <strong>Rich, E.L.</strong> Identifying identity and attributing value to attributes: reconsidering mechanisms of preference decisions. <em>Curr Opin Behav Sci</em> 2021 Oct;41:98-105. doi: https://doi.org/10.1016/j.cobeha.2021.04.019. </p>
+		
+<p>Enel, P., Wallis, J.D., <strong>Rich, E.L.</strong> Stable and dynamic representations of value in the prefrontal cortex.  <em>Elife</em> 2020 Jul 6;9e54313. doi: 10.7554/eLife.54313.</p>
+
+<p>Rudebeck, P.H., <strong>Rich, E.L.</strong>, Mayberg, H.S. From bed to bench side: reverse translation to optimize neuromodulation for mood disorders. <em>Proc Natl Acad Sci</em> 2019 Dec 23;116(52):26288-96. doi: 10.1073/pnas.1902287116.</p>
+
+<p>Rudebeck, P.H., <strong>Rich, E.L.</strong> Orbitofrontal cortex. <em>Curr Biol</em> 2018 Sep 24;28(18):R1083-R1088. doi: 10.1016/j.cub.2018.07.018. </p>
+
+<p><strong>Rich, E.L.</strong>, Stoll, F.M., Rudebeck, P.H. Linking dynamic patterns of neural activity in orbitofrontal cortex with decision making. <em>Curr Opin Neurobiol</em> 2017 Nov 20;49:24-32. doi: 10.1016/j.conb.2017.11.002.</p>
+
+<p>Santacruz, S.R., <strong>Rich, E.L.</strong>, Wallis, J.D., Carmena, J.M. Caudate microstimulation increases value of specific choices. <em>Curr Biol</em> 2017 Nov 6;27(21):3375-3383.e3. doi: 10.1016/j.cub.2017.09.051.</p>
+
+<p><strong>Rich, E.L.</strong>, Wallis, J.D.  Spatiotemporal dynamics of information encoding revealed in orbitofrontal high-gamma. <em>Nat Commun</em> 2017 Oct 26;8(1):1139. doi: 10.1038/s41467-017-01253-5.</p>
 
 <p><strong>Rich, E.L.</strong>, Wallis, J.D. Decoding subjective decisions from Orbitofrontal Cortex. <em>Nat Neurosci.</em> 2016 Jul;19(7):973-80.</p>
 
 <p><strong>Rich, E.L.</strong>, Wallis, J.D. What stays the same in orbitofrontal cortex. <em>Nat Neurosci.</em> 2016 May 26;19(6):768-70. <em>Commentary for Xie and Padoa-Schioppa, 2016.</em></p>
 
 <p><strong>Rich, E.L.</strong>, Wallis, J.D. Medial-lateral organization of the orbitofrontal cortex.  <em>J Cogn Neurosci.</em>  2014 Jul; 26(7):1347-62.</p>
-
-<p><strong>Rich, E.L.</strong>, Wallis, J.D.  Prefrontal-Amygdala Interactions Underlying Value Coding.  <em>Neuron.</em>  2013 Dec; 80(6):1344-1346.
-	<em>Commentary for Rudebeck and Murray, 2013.</em></p>
-
-<p>Perez-Rodriguez, M.M., Hazlett, E.A., <strong>Rich, E.L.</strong>, Ripoll, L.H., Weiner, D.M., Spence, N., Goodman, M., Koenigsberg, H.W., Siever, L.J., New, A.S.  Striatal activity in borderline personality disorder with comorbid intermittent explosive disorder: sex differences.  <em>J Psychiatr Res.</em> 2012 Jun;46(6):797-804.</p>
-
-<p>Wallis, J.D., <strong>Rich, E.L.</strong>  Challenges of Interpreting Frontal Neurons during Value-Based Decision-Making.  <em>Front Neurosci.</em> 2011;5:124. </p>
 
         </section>
 
