--- a/index.html
+++ b/index.html
@@ -40,7 +40,15 @@
 
 <p>My research focuses on understanding the biological basis of complex behavior and cognition. I am particularly interested in how affective processing - in other words how much you do or don't like something - interacts with cognitive and perceptual processing to give rise to learning, memory and decision-making. My principal approach is recording neurophysiological signals from the brain while a subject engages in tasks that tax these abilities.    </p>
         
-        <h3>
+<h3>
+<a id="Book Chapters" class="anchor" href="#Book Chapters" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Book Chapters</h3>
+
+<p>Simon, J., Rudebeck, P.H., <strong>Rich, E.L.</strong> From affective to cognitive processing: Functional organization of the medial frontal cortex. In Roesch, M., Amarante, L., Laubach, M., Brockett, A. (Eds.) What does Medial Frontal Cortex Signal During Behavior? Insights from Behavioral Neurophysiology. <em>International Review of Neurobiology</em>, 2021 Vol 161. Academic Press. https://doi.org/10.1016/bs.irn.2020.11.011.</p>
+
+<p><strong>Rich, E.L.</strong>, Averbeck, B.B. Neurophysiology: Differentiating functional contributions across prefrontal cortex. In Banich, M.T., Haber, S.N., Robbins, T.W. (Eds.) The Frontal Cortex: Organization, Networks, and Function” <em></em>Strüngmann Forum Reports</em>, 2024 Vol 34. MIT Press. ISBN:9780262549530. </p><p>Murray, E.A., Averbeck, B.B., Badre, D., Constantinidis, C., Cools, R., Curtis, C.E., Fellows, L.K., Mitchell, A.S., Murray, J.D., <strong>Rich, E.L.</strong>, D’Esposito, M. Functional fractionation and integration: Physiology, Networks, and Behaviors. In Banich, M.T., Haber, S.N., Robbins, T.W. (Eds.) The Frontal Cortex: Organization, Networks, and Function” <em></em>Strüngmann Forum Reports</em>, 2024 Vol 34. MIT Press. ISBN:9780262549530. </p>
+
+
+<h3>
 <a id="Recent Papers" class="anchor" href="#Recent Papers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Recent Papers</h3>
 
 
